# FeatherHarness

./: .env.example  .gitignore  README.md  client.py  main.py  playground.py  pyproject.toml  测试文档.docx
agent/: __init__.py  lead_agent.py  prompt.py
model/: __init__.py  factory.py
skill/: __init__.py  loader.py  skill.py
subagent/: __init__.py  subagent.py
tool/: __init__.py  tool.py
tool/builtin/: __init__.py  bash_tool.py  get_user_info.py
tools/: __init__.py  tool.py
tools/builtin/: __init__.py  bash_tool.py  edit_file.py  read_file.py  task_tool.py  web_search.py  write_file.py
tools/mcp/: __init__.py  client.py
